# omnivoice.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md
bridge/: bridge.cpp  bridge.h
docs/: SERVER.md  ggml-custom-backend-audit.md
include/: omnivoice.h
patches/: ggml-v0.9.11-omnivoice-cuda-fixes.patch  llama-partial-tensors.patch
src/: audio_preprocess.cpp  omnivoice.cpp  omnivoice_cli.cpp  omnivoice_internal.h  omnivoice_llama.cpp  omnivoice_server.cpp  tokenizer.cpp  wav.cpp
